Add a template class to protect private menbers
+ Add template class ClassPrivateHandleManager
+ Add C-style AA_SAFE_DEL

--- a/ArmyAntLib/ArmyAntLib.vcxproj
+++ b/ArmyAntLib/ArmyAntLib.vcxproj
@@ -98,6 +98,7 @@
     <ClInclude Include="include\AA_start.h" />
     <ClInclude Include="include\AADefine.h" />
     <ClInclude Include="include\AAFile.h" />
+    <ClInclude Include="include\AAClassPrivateHandle.hpp" />
     <ClInclude Include="include\C_AADefine.h" />
     <ClInclude Include="include\C_AAFile.h" />
   </ItemGroup>
