--- a/ArmyAntLib/ArmyAntLib.vcxproj.filters
+++ b/ArmyAntLib/ArmyAntLib.vcxproj.filters
@@ -63,6 +63,9 @@
     <ClInclude Include="include\AATripleMap.hpp">
       <Filter>3.CppLibCode\templateClasses</Filter>
     </ClInclude>
+    <ClInclude Include="include\AAStateMachine.h">
+      <Filter>3.CppLibCode</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\AAFile.cpp">
