Test the AES, and change some codes
* Test a part of AES
* Repair a bug in TripleMap operator ++ and --
* Repair a bug in ClassPrivateHandleManager when find an inexist handle
object
* Change the C interface return value bool to BOOL(int)
* Test FileStream functions in memory and COM
* Remove gitignored directories which is the output dir,we should input
our compiled result

--- a/.gitignore
+++ b/.gitignore
@@ -7,18 +7,6 @@
 *.userosscache
 *.sln.docstates
 
-# Build results
-[Dd]ebug/
-[Dd]ebugPublic/
-[Rr]elease/
-[Rr]eleases/
-x64/
-x86/
-build/
-bld/
-[Bb]in/
-[Oo]bj/
-
 # Roslyn cache directories
 *.ide/
 
@@ -229,6 +217,8 @@ $RECYCLE.BIN/
 
 # Windows shortcuts
 *.lnk
+
+# Build logs
 *.tlog
 *.idb
 *.tlog
