--- a/Win32LibTest/Win32LibTest.vcxproj
+++ b/Win32LibTest/Win32LibTest.vcxproj
@@ -91,17 +91,14 @@
       </PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_cplusplus;WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
     <PreBuildEvent>
-      <Command>copy $(SolutionDir)ArmyAntLib\include\*.* $(ProjectDir)include\
-copy $(SolutionDir)ArmyAntLib\lib\*.* $(ProjectDir)lib\
-copy $(SolutionDir)ArmyAntLib\*.h $(ProjectDir)
-copy $(SolutionDir)ArmyAntLib\bin\*.* $(ProjectDir)bin\</Command>
+      <Command>build_start.bat $(SolutionDir) $(ProjectDir)</Command>
     </PreBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -125,7 +122,7 @@ copy $(SolutionDir)ArmyAntLib\bin\*.* $(ProjectDir)bin\</Command>
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
-      <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_cplusplus;WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -134,10 +131,7 @@ copy $(SolutionDir)ArmyAntLib\bin\*.* $(ProjectDir)bin\</Command>
       <OptimizeReferences>true</OptimizeReferences>
     </Link>
     <PreBuildEvent>
-      <Command>copy $(SolutionDir)ArmyAntLib\include\*.* $(ProjectDir)include\
-copy $(SolutionDir)ArmyAntLib\lib\*.* $(ProjectDir)lib\
-copy $(SolutionDir)ArmyAntLib\*.h $(ProjectDir)
-copy $(SolutionDir)ArmyAntLib\bin\*.* $(ProjectDir)bin\</Command>
+      <Command>build_start.bat $(SolutionDir) $(ProjectDir)</Command>
     </PreBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -162,6 +156,9 @@ copy $(SolutionDir)ArmyAntLib\bin\*.* $(ProjectDir)bin\</Command>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="build_start.bat" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
