--- a/ArmyAntLib/ArmyAntLib.vcxproj.filters
+++ b/ArmyAntLib/ArmyAntLib.vcxproj.filters
@@ -72,6 +72,9 @@
     <ClInclude Include="include\AAAes.h">
       <Filter>3.CppLibCode</Filter>
     </ClInclude>
+    <ClInclude Include="include\AAFragment.h">
+      <Filter>2.mainOutput\defination</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\AAFile.cpp">
