--- a/ArmyAntLib/ArmyAntLib.vcxproj
+++ b/ArmyAntLib/ArmyAntLib.vcxproj
@@ -102,6 +102,7 @@
     <ClInclude Include="include\AAAes.h" />
     <ClInclude Include="include\AABinary.h" />
     <ClInclude Include="include\AAStateMachine.h" />
+    <ClInclude Include="include\AATree.hpp" />
     <ClInclude Include="include\AATripleMap.hpp" />
     <ClInclude Include="include\AA_end.h" />
     <ClInclude Include="include\AA_start.h" />
