--- a/ArmyAntLib/CMakeLists.txt
+++ b/ArmyAntLib/CMakeLists.txt
@@ -1,7 +1,6 @@
 cmake_minimum_required(VERSION 3.3)
 project(ArmyAntLib)
 
-
 set(CMAKE_BUILD_TYPE Debug)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
@@ -18,19 +17,21 @@ else()
 endif()
 
 add_definitions(
-        -D_cplusplus=1
-        -D_CMAKE=1
-        -DOS_UNIX=1
-        -DARMYANTLIB_EXPORTS
-)
+		-D_cplusplus=1
+		-D_CMAKE=1
+		-DOS_UNIX=1
+		-DARMYANTLIB_EXPORTS
+		)
+
+set(C_SOURCE_FILES
+        src/C_AAFile.cpp
+        src/C_AANeuron.cpp
+        )
 
 set(CXX_SOURCE_FILES
         src/AAAes.cpp
         src/AAFile.cpp
-        )
-
-set(C_SOURCE_FILES
-        src/C_AAFile.cpp
+		${C_SOURCE_FILES}
         )
 
 add_library(${CMAKE_TAR_NAME} SHARED ${CXX_SOURCE_FILES})
