Complete Java Reference without test
The FileStream and NeuronAlgorithm has been referenced to Java language,
but have not been tested.
Prepare to reference them to Python language

--- a/ArmyAntLib/ArmyAntLib.vcxproj
+++ b/ArmyAntLib/ArmyAntLib.vcxproj
@@ -249,7 +249,8 @@
     <ClInclude Include="include\AADefine.h" />
     <ClInclude Include="include\AAFile.h" />
     <ClInclude Include="include\AAClassPrivateHandle.hpp" />
-    <ClInclude Include="include\ArmyAnt_Java_AAFile.h" />
+    <ClInclude Include="include\Java_AAFile.h" />
+    <ClInclude Include="include\Java_AANeuron.h" />
     <ClInclude Include="include\C_AADefine.h" />
     <ClInclude Include="include\C_AAFile.h" />
     <ClInclude Include="include\C_AANeuron.h" />
@@ -257,7 +258,8 @@
   <ItemGroup>
     <ClCompile Include="src\AAAes.cpp" />
     <ClCompile Include="src\AAFile.cpp" />
-    <ClCompile Include="src\ArmyAnt_Java_AAFile.cpp" />
+    <ClCompile Include="src\Java_AAFile.cpp" />
+    <ClCompile Include="src\Java_AANeuron.cpp" />
     <ClCompile Include="src\C_AAFile.cpp" />
     <ClCompile Include="src\C_AANeuron.cpp" />
   </ItemGroup>
@@ -266,6 +268,7 @@
     <None Include="base\build_start.bat" />
     <None Include="base\build_start.sh" />
     <None Include="languages\Java\src\Java_AAFile.java" />
+    <None Include="languages\Java\src\Java_AANeuron.java" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="base\ProgrammerRule.txt" />
