--- a/ArmyAntLib/ArmyAntLib.vcxproj
+++ b/ArmyAntLib/ArmyAntLib.vcxproj
@@ -353,6 +353,7 @@
     <ClCompile Include="src\C_AANeuron.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="..\ArmyAnt.license" />
     <None Include="base\build_end.bat" />
     <None Include="base\build_start.bat" />
     <None Include="base\build_start.sh" />
@@ -361,7 +362,7 @@
     <None Include="languages\Python\ArmyAnt.py" />
   </ItemGroup>
   <ItemGroup>
-    <Text Include="base\ProgrammerRule.txt" />
+    <Text Include="base\Readme.txt" />
     <Text Include="CMakeLists.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
