Edit the cmakelist file to adapt CLion IDE latest cpp files 没有办法将Python和Java的库头文件加入到cmake的系统搜索列表，下一步先在Windows下探索

--- a/ArmyAntLib/CMakeLists.txt
+++ b/ArmyAntLib/CMakeLists.txt
@@ -4,6 +4,15 @@ project(ArmyAntLib)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 set(CMAKE_TAR_NAME ArmyAntLib)
 
+#include_directories($ENV{JAVA_HOME}/include)
+#include_directories($ENV{PYTHON_INCLUDE})
+find_path(JNI_INCLUDE_DIR jni.h $ENV{JAVA_HOME}/include)
+find_path(PY_INCLUDE_DIR Python.h $ENV{PYTHON_INCLUDE})
+include_directories($JNI_INCLUDE_DIR)
+include_directories($PY_INCLUDE_DIR)
+
+MESSAGE(This is $ENV{PYTHON_INCLUDE})
+
 if(CMAKE_BUILD_TYPE STREQUAL Debug)
     add_definitions(
 			-DDEBUG=1
@@ -20,20 +29,23 @@ add_definitions(
 		-D_CMAKE=1
 		-DOS_UNIX=1
 		-DARMYANTLIB_EXPORTS
-		)
+)
 
 set(C_SOURCE_FILES
         src/C_AAFile.cpp
         src/C_AANeuron.cpp
-        )
+)
 
 set(CXX_SOURCE_FILES
         src/AAAes.cpp
         src/AAFile.cpp
+		src/AAPythonExport.cpp
+		src/Java_AAFile.cpp
+		src/Java_AANeuron.cpp
 		${C_SOURCE_FILES}
-        )
+)
 
 add_library(${CMAKE_TAR_NAME} SHARED ${CXX_SOURCE_FILES})
 
-MESSAGE(${PROJECT_BINARY_DIR})
+MESSAGE(This is ${PROJECT_BINARY_DIR})
 SET_TARGET_PROPERTIES(${CMAKE_TAR_NAME} PROPERTIES OUTPUT_NAME ArmyAnt)
